fixed an error in the css that caused the navbar to be messed up on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-.navbar-nav {
+/*.navbar-nav {
 	height: 50px;
-}
+}*/
 
 .nav>li>a>img {
 	max-height: 22px;
